@@ -116,13 +116,12 @@ public class TestData implements Runnable {
     static {
 
         // do we wrappers at hand?
-        boolean mediaLib = false;
         Class mediaLibImage = null;
         try {
             mediaLibImage = Class.forName("com.sun.medialib.mlib.Image");
         } catch (ClassNotFoundException e) {
         }
-        mediaLib = (mediaLibImage != null);
+        boolean mediaLib = (mediaLibImage != null);
 
         // npw check if we either wanted to disable explicitly and if we installed the native libs
         if (mediaLib) {
@@ -134,29 +133,23 @@ public class TestData implements Runnable {
                 // native libs installed
                 if (mediaLib) {
                     final Class mImage = mediaLibImage;
-                    mediaLib =
-                            AccessController.doPrivileged(
-                                    new PrivilegedAction<Boolean>() {
-                                        public Boolean run() {
-                                            try {
-                                                // get the method
-                                                final Class params[] = {};
-                                                Method method =
-                                                        mImage.getDeclaredMethod(
-                                                                "isAvailable", params);
+                    PrivilegedAction<Boolean> action =
+                            () -> {
+                                try {
+                                    // get the method
+                                    final Class[] params = {};
+                                    Method method = mImage.getDeclaredMethod("isAvailable", params);
 
-                                                // invoke
-                                                final Object paramsObj[] = {};
+                                    // invoke
+                                    final Object[] paramsObj = {};
 
-                                                final Object o =
-                                                        mImage.getDeclaredConstructor()
-                                                                .newInstance();
-                                                return (Boolean) method.invoke(o, paramsObj);
-                                            } catch (Throwable e) {
-                                                return false;
-                                            }
-                                        }
-                                    });
+                                    final Object o = mImage.getDeclaredConstructor().newInstance();
+                                    return (Boolean) method.invoke(o, paramsObj);
+                                } catch (Throwable e) {
+                                    return false;
+                                }
+                            };
+                    mediaLib = AccessController.doPrivileged(action);
                 }
             } catch (Throwable e) {
                 // Because the property com.sun.media.jai.disableMediaLib isn't
@@ -417,6 +410,11 @@ public class TestData implements Runnable {
             throws FileNotFoundException, IOException {
         final File file = file(caller, name);
         final File parent = file.getParentFile().getAbsoluteFile();
+        unzip(file, parent);
+    }
+
+    /** Unzips the give source file in the target directory */
+    public static void unzip(File file, File target) throws IOException {
         try (final ZipFile zipFile = new ZipFile(file)) {
             final Enumeration entries = zipFile.entries();
             final byte[] buffer = new byte[4096];
@@ -425,7 +423,7 @@ public class TestData implements Runnable {
                 if (entry.isDirectory()) {
                     continue;
                 }
-                final File path = new File(parent, entry.getName());
+                final File path = new File(target, entry.getName());
                 if (path.exists()) {
                     continue;
                 }
@@ -524,6 +522,7 @@ public class TestData implements Runnable {
      * Deletes all temporary files. This method is invoked automatically at shutdown time and should
      * not be invoked directly. It is public only as an implementation side effect.
      */
+    @Override
     @SuppressWarnings("PMD.SystemPrintln")
     public void run() {
         int iteration = 5; // Maximum number of iterations
